[gd_scene load_steps=14 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://button.gd" type="Script" id=2]
[ext_resource path="res://start_base.png" type="Texture" id=3]
[ext_resource path="res://start_clicked.png" type="Texture" id=4]
[ext_resource path="res://start_marked.png" type="Texture" id=5]
[ext_resource path="res://Audio/mushroom_game.ogg" type="AudioStream" id=6]
[ext_resource path="res://font/digital-7 (mono).ttf" type="DynamicFontData" id=7]
[ext_resource path="res://hiryu.png" type="Texture" id=8]
[ext_resource path="res://leszek.png" type="Texture" id=9]
[ext_resource path="res://neina.png" type="Texture" id=10]
[ext_resource path="res://tomek.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]

size = 36
use_mipmaps = false
use_filter = false
font_data = ExtResource( 7 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=2]

resource_name = "idle"
length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}

[node name="start" type="Node" index="0"]

_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Material", "Mouse", "Pause", "Rect", "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="background" type="Sprite" parent="." index="0"]

modulate = Color( 0.695313, 0.0516052, 0.0516052, 1 )
show_behind_parent = true
scale = Vector2( 2.99865, 3.33642 )
texture = ExtResource( 1 )
centered = false
_sections_unfolded = [ "Offset", "Transform", "Visibility" ]

[node name="title" type="Sprite" parent="." index="1"]

position = Vector2( 190.151, 106.21 )
texture = ExtResource( 1 )

[node name="buttons" type="Node" parent="." index="2"]

[node name="Exit" type="TextureButton" parent="buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 496.0
margin_top = 735.0
margin_right = 1008.0
margin_bottom = 1247.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 1 )
script = ExtResource( 2 )
_sections_unfolded = [ "Textures" ]

[node name="Start" type="TextureButton" parent="buttons" index="1"]

show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 55.0
margin_top = 164.0
margin_right = 842.0
margin_bottom = 377.0
rect_scale = Vector2( 0.3, 0.3 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
script = ExtResource( 2 )
_sections_unfolded = [ "Anchor", "Focus", "Grow Direction", "Hint", "Margin", "Mouse", "Pause", "Rect", "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="IntroMusic" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
mix_target = 0
bus = "Master"

[node name="Label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 392.0
margin_right = 168.0
margin_bottom = 413.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Eli"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts" ]

[node name="hiryu" type="Sprite" parent="." index="5"]

position = Vector2( 948, 467 )
scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
flip_h = true
_sections_unfolded = [ "Offset" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="hiryu" index="0"]

root_node = NodePath("..")
autoplay = "idle"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/idle = SubResource( 2 )
blend_times = [  ]

[node name="leszek" type="Sprite" parent="." index="6"]

position = Vector2( 837, 460 )
scale = Vector2( 3, 3 )
texture = ExtResource( 9 )

[node name="neina" type="Sprite" parent="." index="7"]

position = Vector2( 556, 457 )
scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
_sections_unfolded = [ "Transform" ]

[node name="tomek" type="Sprite" parent="." index="8"]

position = Vector2( 721, 461 )
scale = Vector2( 3, 3 )
texture = ExtResource( 11 )

[connection signal="mouse_entered" from="buttons/Exit" to="buttons/Exit" method="_on_mouse_entered"]

[connection signal="mouse_exited" from="buttons/Exit" to="buttons/Exit" method="_on_mouse_exited"]

[connection signal="pressed" from="buttons/Exit" to="buttons/Exit" method="_on_exit"]

[connection signal="mouse_entered" from="buttons/Start" to="buttons/Start" method="_on_mouse_entered"]

[connection signal="mouse_exited" from="buttons/Start" to="buttons/Start" method="_on_mouse_exited"]

[connection signal="pressed" from="buttons/Start" to="buttons/Start" method="_on_Start"]


